test/spec_vectors/local_tee/fail/module_35.wat
(module (func $type-mixed-arg-num-vs-num (param i64) (local f64 i64) (local.tee 1 (i64.const 0))))